# xdsl-webgpu

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-wgpu.yml
tests/filecheck/: global_id_inc.mlir  lit.cfg
xdsl_webgpu/interpreters/: wgpu.py
xdsl_webgpu/tools/: xdsl_webgpu_run.py
