[project]
name = "xdsl-webgpu"
version = "0.1.0"
description = "Run your MLIR GPU kernels on WebGPU!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xdsl @ git+https://github.com/xdslproject/xdsl.git@016b922d2d6d2ccfab10fe7ab65a0daecc60fb49",
    "wgpu==0.25.0",
]

[dependency-groups]
dev = ["xdsl[dev]"]

[project.scripts]
xdsl-webgpu-run = "xdsl_webgpu.tools.xdsl_webgpu_run:main"

[tool.uv]
package = true
