[project]
name = "xdsl-webgpu"
version = "0.1.0"
description = "Run your MLIR GPU kernels on WebGPU!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["xdsl>=0.62,<0.64", "wgpu>=0.31.0,<0.32"]

[dependency-groups]
dev = ["xdsl[dev]"]

[project.scripts]
xdsl-webgpu-run = "xdsl_webgpu.tools.xdsl_webgpu_run:main"

[tool.uv]
package = true
